[package]
name = "lockfree_car"
version = "0.1.0"
edition = "2021"

[lib]
name = "lockfree_car"

[[bin]]
name = "cache"
path = "src/main.rs"

[dependencies]
crossbeam = {version="0.8.4", default-features=false, features=["crossbeam-queue", "crossbeam-epoch", "alloc"]}
crossbeam-skiplist = "*"
smallvec = { version = "1.13.2", features = ["const_generics"] }
thread_local = "1.1.8"

[profile.release]
debug = "full"
split-debuginfo = "packed"
